--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
     </div>
     <div style="background-color:goldenrod;">
         <h1>Lets try lists</h1>
+        <!--I am just trying formatting the heading-->
         <h2><b>Unordered list</b></h2>
         <ul>
             <li>Coffee</li>
             <li>Tea</li>
             <li>Milk</li>
         </ul>
-
+        <!--As you can see, this green color line is a comment-->
         <h2><i>Ordered List</i></h2>
         <ol>
             <li>Coffee</li>
@@ -63,5 +64,7 @@
         </dl>
 
     </div>
+
+    <p>This is a new paragraph, just to test the github</p>
 </body>
 </html>
