--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@
     </div>
 
     <p>This is a new paragraph, just to test the github</p>
+    
+    <p>Here I am adding the new line from github itself</p>
 </body>
 </html>
